--- a/src/views/components/_why-we-do.pug
+++ b/src/views/components/_why-we-do.pug
@@ -91,12 +91,12 @@
             |แบ่งปันรอยยิ้ม
           .c-how-we-do__text
             p ไข่ไก่ที่ได้รับจากการบริจาค อัครา ร่วมกับอาสาสมัครที่สนใจ อาสาลงพื้นที่เพื่อนำไปมอบให้กับโรงเรียนที่ขาดแคลน พร้อมปรุงอาหารโดยเชฟมืออาชีพ เพื่อช่วยเหลือน้อง ๆ ที่มีภาวะขาดแคลนโภชนาการ
-.c-our-impact
+.c-our-impact.js-inview
   .c-our-impact__inner
-    .c-our-impact__box-heading.js-inview.u-fade-in-up
+    .c-our-impact__box-heading.js-inview.u-fade-in-down
       h2.c-heading-type1 Our Impact
       .c-our-impact__heading ยอดร่วมบริจาคล่าสุดของเรา
-    .c-our-impact__box-donate.js-inview.u-fade-in-up
+    .c-our-impact__box-donate.js-inview.u-fade-in-down
       .c-our-impact__box-donate-item
         .c-our-impact__box-donate-number.js-inview-number(data-number="6") 0
         .c-our-impact__box-donate-text เดือน
