--- a/src/styles/common/components/_animate.scss
+++ b/src/styles/common/components/_animate.scss
@@ -17,10 +17,7 @@
   &.is-animated {
     opacity: 1;
     transform: translateY(0) translateZ(0);
-    // transition: opacity $duration ease-out, transform $duration ease-out;
-    transition-property: opacity, transform;
-    transition-duration: $duration, $duration;
-    transition-timing-function: ease-out, ease-out;
+    transition: opacity $duration ease-out, transform $duration ease-out;
   }
 }
 
@@ -31,10 +28,7 @@
   &.is-animated {
     opacity: 1;
     transform: translateY(0) translateZ(0);
-    // transition: opacity $duration ease-out, transform $duration ease-out;
-    transition-property: opacity, transform;
-    transition-duration: $duration, $duration;
-    transition-timing-function: ease-out, ease-out;
+    transition: opacity $duration ease-out, transform $duration ease-out;
   }
 }
 
