--- a/src/views/components/_children-sound.pug
+++ b/src/views/components/_children-sound.pug
@@ -8,12 +8,13 @@
         .c-children-sound__wrapper.swiper-wrapper
           .c-children-sound__item.swiper-slide
             .c-children-sound
-              .c-children-sound__image
+              .c-children-sound__image.js-inview.u-fade-in-up
                 figure.c-children-sound__fig
                   img(src="assets/images/children-sound/img_children.jpg", alt="")
-              .c-children-sound__box-quote
-                .c-children-sound__quote "ขอบคุณมากๆเลย ครับ<br>เพื่อนๆ และผมอิ่มมากครับ ผมกินไป 2 จานเลยแล้วก็ได้ของกลับบ้านด้วย ขอบคุณครับ ฮ่าๆๆ"
-                .c-children-sound__children ดช. อายีระ  ยาลอซู<br>โรงเรียนดอยตุง จ.แม่ฮ่องสอน
+              .c-children-sound__box-quote.js-inview.u-fade-in
+                .c-children-sound__box-quote-in.js-inview.u-fade-in-up
+                  .c-children-sound__quote "ขอบคุณมากๆเลย ครับ<br>เพื่อนๆ และผมอิ่มมากครับ ผมกินไป 2 จานเลยแล้วก็ได้ของกลับบ้านด้วย ขอบคุณครับ ฮ่าๆๆ"
+                  .c-children-sound__children ดช. อายีระ  ยาลอซู<br>โรงเรียนดอยตุง จ.แม่ฮ่องสอน
           //- c-children-sound__item
           .c-children-sound__item.swiper-slide
             .c-children-sound
@@ -21,8 +22,9 @@
                 figure.c-children-sound__fig
                   img(src="assets//images/children-sound/img_children_02.jpg", alt="")
               .c-children-sound__box-quote
-                .c-children-sound__quote "ขอบคุณมากๆเลย ครับ<br>เพื่อนๆ และผมอิ่มมากครับ ผมกินไป 2 จานเลยแล้วก็ได้ของกลับบ้านด้วย ขอบคุณครับ ฮ่าๆๆ"
-                .c-children-sound__children ดช. อายีระ  ยาลอซู<br>โรงเรียนดอยตุง จ.แม่ฮ่องสอน
+                .c-children-sound__box-quote-in
+                  .c-children-sound__quote "ขอบคุณมากๆเลย ครับ<br>เพื่อนๆ และผมอิ่มมากครับ ผมกินไป 2 จานเลยแล้วก็ได้ของกลับบ้านด้วย ขอบคุณครับ ฮ่าๆๆ"
+                  .c-children-sound__children ดช. อายีระ  ยาลอซู<br>โรงเรียนดอยตุง จ.แม่ฮ่องสอน
           //- c-children-sound__item
         
         .c-children-sound__pagination.swiper-pagination.js-children-sound-pagination
