--- a/src/views/components/_our-associate.pug
+++ b/src/views/components/_our-associate.pug
@@ -1,11 +1,12 @@
 section.c-our-associate
   .c-our-associate__in
-    h2.c-heading-type1.c-our-associate__label OUR ASSOCIATE
-    h2.c-our-associate__title ข้อความจากผู้ร่วมโครงการ
+    .js-inview.u-fade-in-up
+      h2.c-heading-type1.c-our-associate__label OUR ASSOCIATE
+      h2.c-our-associate__title ข้อความจากผู้ร่วมโครงการ
 
     .c-our-associate__list.js-our-associate-list
       .c-our-associate__item
-        .c-our-associate__card
+        .c-our-associate__card.js-inview.u-fade-in-pop
           figure.c-our-associate__card-image
             img(
               src="assets/images/our-associate/img_associate_01.jpg"
@@ -24,7 +25,7 @@ section.c-our-associate
                 p.c-our-associate__author-name สุนิสา ชวลิต
         // /c-our-associate__card
 
-        .c-our-associate__card
+        .c-our-associate__card.js-inview.u-fade-in-pop
           .c-our-associate__card-info
             .c-our-associate__card-text
               p “ขอบคุณโครงการดีๆ ที่คอยช่วยเหลือสังคม ขอให้น้องๆมีความสุข”
@@ -40,7 +41,7 @@ section.c-our-associate
       // /c-our-associate__item
 
       .c-our-associate__item
-        .c-our-associate__card
+        .c-our-associate__card.js-inview.u-fade-in-pop
           figure.c-our-associate__card-image
             img(
               src="assets/images/our-associate/img_associate_02.jpg"
@@ -59,7 +60,7 @@ section.c-our-associate
                 p.c-our-associate__author-name กมลรัตน์ หลุย
         // /c-our-associate__card
 
-        .c-our-associate__card
+        .c-our-associate__card.js-inview.u-fade-in-pop
           .c-our-associate__card-info
             .c-our-associate__card-text
               p “อยากให้มีกิจกรรมแบบนี้เกิดขึ้นบ่อยๆ #[br._d-sm-none]เด็กๆจะได้ไม่ต้องเจอปัญหา#[br._d-sm-none]ขาดแคลนอาหารอีก”
@@ -75,7 +76,7 @@ section.c-our-associate
       // /c-our-associate__item
 
       .c-our-associate__item
-        .c-our-associate__card
+        .c-our-associate__card.js-inview.u-fade-in-pop
           figure.c-our-associate__card-image
             img(
               src="assets/images/our-associate/img_associate_03.jpg"
@@ -94,7 +95,7 @@ section.c-our-associate
                 p.c-our-associate__author-name นันธิดา มหากิจสิริ
         // /c-our-associate__card
 
-        .c-our-associate__card
+        .c-our-associate__card.js-inview.u-fade-in-pop
           .c-our-associate__card-info
             .c-our-associate__card-text
               p “กิจกรรมดี ไข่ไก่คุณภาพและยังได้แบ่งปันให้กับผู้อื่น”
