--- a/src/views/components/_why-we-do.pug
+++ b/src/views/components/_why-we-do.pug
@@ -112,7 +112,7 @@
 
 .c-activity(id='activities')
   .c-activity__inner
-    .c-activity__box-title
+    .c-activity__box-title.js-inview.u-fade-in-up
       .c-activity__box-label
         h2.c-heading-type1 Activities
       .c-activity__box-heading
@@ -124,8 +124,28 @@
     
     .c-activity__box-list
       .c-activity__list.js-activity-scroller
-        .c-activity__row
-          .c-activity__item
+        .c-activity__row.js-activity-row
+          .c-activity__item.js-inview.u-fade-in-up.js-point
+            .c-activity__card
+              figure.c-activity__frame
+                img.c-activity__image(src="assets/images/activity/img_activity_01.png", alt="")
+              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
+              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+          .c-activity__item.js-inview.u-fade-in-up
+            .c-activity__card
+              figure.c-activity__frame
+                img.c-activity__image(src="assets/images/activity/img_activity_02.png", alt="")
+              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
+              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+          .c-activity__item.js-inview.u-fade-in-up.-big.-orange.js-point
+            .c-activity__card
+              figure.c-activity__frame
+                img.c-activity__image._d-md-none(src="assets/images/activity/img_activity_04_sp.png", alt="")
+                img.c-activity__image._d-sm-none(src="assets/images/activity/img_activity_04_pc.png", alt="")
+              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
+              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+
+          .c-activity__item.js-point
             .c-activity__card
               figure.c-activity__frame
                 img.c-activity__image(src="assets/images/activity/img_activity_01.png", alt="")
@@ -137,7 +157,7 @@
                 img.c-activity__image(src="assets/images/activity/img_activity_02.png", alt="")
               .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
               .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
-          .c-activity__item.-big.-orange
+          .c-activity__item.-big.-orange.js-point
             .c-activity__card
               figure.c-activity__frame
                 img.c-activity__image._d-md-none(src="assets/images/activity/img_activity_04_sp.png", alt="")
@@ -146,6 +166,27 @@
               .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
 
         .c-activity__row
+          .c-activity__item.js-inview.u-fade-in-up.-big.-blue
+            .c-activity__card
+              figure.c-activity__frame
+                img.c-activity__image._d-md-none(src="assets/images/activity/img_activity_03_sp.png", alt="")
+                img.c-activity__image._d-sm-none(src="assets/images/activity/img_activity_03_pc.png", alt="")
+              .c-activity__box-absolute
+                .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
+                .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+          .c-activity__item.js-inview.u-fade-in-up
+            .c-activity__card
+              figure.c-activity__frame
+                img.c-activity__image(src="assets/images/activity/img_activity_05.png", alt="")
+              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
+              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+          .c-activity__item.js-inview.u-fade-in-up
+            .c-activity__card
+              figure.c-activity__frame
+                img.c-activity__image(src="assets/images/activity/img_activity_06.png", alt="")
+              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
+              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+
           .c-activity__item.-big.-blue
             .c-activity__card
               figure.c-activity__frame
