--- a/src/styles/common/components/_how-we-do.scss
+++ b/src/styles/common/components/_how-we-do.scss
@@ -15,14 +15,14 @@
 
   &__item {
     &.is-animated {
-      transition-delay: 0.4s;
+      transition-delay: 0.4s !important;
 
       &:nth-child(2n) {
-        transition-delay: 0.8s;
+        transition-delay: 0.8s !important;
       }
 
       &:nth-child(3n) {
-        transition-delay: 1.2s;
+        transition-delay: 1.2s !important;
       }
     }
 
