--- a/src/styles/common/components/_our-associate.scss
+++ b/src/styles/common/components/_our-associate.scss
@@ -79,6 +79,36 @@
           }
         }
       }
+
+      &:nth-child(1) {
+        > .is-animated:nth-child(1) {
+          transition-delay: 0.3s !important;
+        }
+
+        > .is-animated:nth-child(2) {
+          transition-delay: 0.9s !important;
+        }
+      }
+
+      &:nth-child(2) {
+        > .is-animated:nth-child(1) {
+          transition-delay: 1.5s !important;
+        }
+
+        > .is-animated:nth-child(2) {
+          transition-delay: 1.8s !important;
+        }
+      }
+
+      &:nth-child(3) {
+        > .is-animated:nth-child(1) {
+          transition-delay: 1.2s !important;
+        }
+
+        > .is-animated:nth-child(2) {
+          transition-delay: 0.6s !important;
+        }
+      }
     }
 
     &.is-hidden {
