--- a/src/views/components/_lets-share.pug
+++ b/src/views/components/_lets-share.pug
@@ -1,19 +1,20 @@
 section.c-lets-share
-  .c-lets-share__bg
+  .c-lets-share__bg.js-inview
   .c-lets-share__in
-    .c-lets-share__content
+    .c-lets-share__content.js-inview.u-fade-in-up
       h2.c-heading-type1.c-lets-share__heading LET'S SHARE
-      p.c-lets-share__text "Thank you. #[br]Your donation helps support children in need"
-      ul.c-lets-share__list
-        li.c-lets-share__list-item
-          a(href="https://twitter.com/akaragroupth" target="_blank")
-            img(src="assets/images/lets-share/btn_tw.png", alt="Twitter")
-        li.c-lets-share__list-item
-          a(href="https://www.facebook.com/akaragroupTH" target="_blank")
-            img(src="assets/images/lets-share/btn_fb.png", alt="Facebook")
-        li.c-lets-share__list-item
-          a(href="mailto:webadmin@akaragroup.co.th")
-            img(src="assets/images/lets-share/btn_email.png", alt="Email")
+      .c-lets-share__content-in.js-inview.u-fade-in-up
+        p.c-lets-share__text "Thank you. #[br]Your donation helps support children in need"
+        ul.c-lets-share__list
+          li.c-lets-share__list-item
+            a(href="https://twitter.com/akaragroupth" target="_blank")
+              img(src="assets/images/lets-share/btn_tw.png", alt="Twitter")
+          li.c-lets-share__list-item
+            a(href="https://www.facebook.com/akaragroupTH" target="_blank")
+              img(src="assets/images/lets-share/btn_fb.png", alt="Facebook")
+          li.c-lets-share__list-item
+            a(href="mailto:webadmin@akaragroup.co.th")
+              img(src="assets/images/lets-share/btn_email.png", alt="Email")
     // /c-lets-share__content
   // /c-lets-share__in
 // /c-lets-share
