--- a/src/views/components/_our-associate.pug
+++ b/src/views/components/_our-associate.pug
@@ -23,8 +23,7 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name สุนิสา ชวลิต
-        // /c-our-associate__card
-
+        //- /c-our-associate__card
         .c-our-associate__card.js-inview.u-fade-in-pop
           .c-our-associate__card-info
             .c-our-associate__card-text
@@ -37,8 +36,8 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name ประพาน รตน
-        // /c-our-associate__card
-      // /c-our-associate__item
+        //- /c-our-associate__card
+      //- /c-our-associate__item
 
       .c-our-associate__item
         .c-our-associate__card.js-inview.u-fade-in-pop
@@ -58,8 +57,7 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name กมลรัตน์ หลุย
-        // /c-our-associate__card
-
+        //- /c-our-associate__card
         .c-our-associate__card.js-inview.u-fade-in-pop
           .c-our-associate__card-info
             .c-our-associate__card-text
@@ -72,8 +70,8 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name รวี มนตรี
-        // /c-our-associate__card
-      // /c-our-associate__item
+        //- /c-our-associate__card
+      //- /c-our-associate__item
 
       .c-our-associate__item
         .c-our-associate__card.js-inview.u-fade-in-pop
@@ -93,8 +91,7 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name นันธิดา มหากิจสิริ
-        // /c-our-associate__card
-
+        //- /c-our-associate__card
         .c-our-associate__card.js-inview.u-fade-in-pop
           .c-our-associate__card-info
             .c-our-associate__card-text
@@ -107,11 +104,11 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name เพ็ญศรี พรประภา
-        // /c-our-associate__card
-      // /c-our-associate__item
+        //- /c-our-associate__card
+      //- /c-our-associate__item
 
       .c-our-associate__item
-        .c-our-associate__card
+        .c-our-associate__card.u-fade-in-pop
           figure.c-our-associate__card-image
             img(
               src="assets/images/our-associate/img_associate_01.jpg"
@@ -128,9 +125,9 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name สุนิสา ชวลิต
-        // /c-our-associate__card
+        //- /c-our-associate__card
 
-        .c-our-associate__card
+        .c-our-associate__card.u-fade-in-pop
           .c-our-associate__card-info
             .c-our-associate__card-text
               p “ขอบคุณโครงการดีๆ ที่คอยช่วยเหลือสังคม ขอให้น้องๆมีความสุข”
@@ -142,11 +139,12 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name ประพาน รตน
-        // /c-our-associate__card
-      // /c-our-associate__item
+        //- /c-our-associate__card
+      //- /c-our-associate__item
 
+      //- /more items
       .c-our-associate__item
-        .c-our-associate__card
+        .c-our-associate__card.u-fade-in-pop
           figure.c-our-associate__card-image
             img(
               src="assets/images/our-associate/img_associate_02.jpg"
@@ -163,9 +161,9 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name กมลรัตน์ หลุย
-        // /c-our-associate__card
+        //- /c-our-associate__card
 
-        .c-our-associate__card
+        .c-our-associate__card.u-fade-in-pop
           .c-our-associate__card-info
             .c-our-associate__card-text
               p “อยากให้มีกิจกรรมแบบนี้เกิดขึ้นบ่อยๆ #[br._d-sm-none]เด็กๆจะได้ไม่ต้องเจอปัญหา#[br._d-sm-none]ขาดแคลนอาหารอีก”
@@ -177,10 +175,44 @@ section.c-our-associate
               .c-our-associate__author-info
                 p.c-our-associate__author-position Donator
                 p.c-our-associate__author-name รวี มนตรี
-        // /c-our-associate__card
-      // /c-our-associate__item
-    // /c-our-associate__list
+        //- /c-our-associate__card
+      //- /c-our-associate__item
+
+      .c-our-associate__item
+        .c-our-associate__card.u-fade-in-pop
+          figure.c-our-associate__card-image
+            img(
+              src="assets/images/our-associate/img_associate_03.jpg"
+              alt=""
+            )
+          .c-our-associate__card-info
+            .c-our-associate__card-text
+              p “กิจกรรมดี ไข่มีคุณภาพแล้วยังได้มีส่วนช่วยเด็กที่ขาดแคลนอาหารอีก”
+            .c-our-associate__author
+              img.c-our-associate__author-image(
+                src="assets/images/our-associate/img_author_05.jpg"
+                alt="Director"
+              )
+              .c-our-associate__author-info
+                p.c-our-associate__author-position Donator
+                p.c-our-associate__author-name นันธิดา มหากิจสิริ
+        //- /c-our-associate__card
+        .c-our-associate__card.u-fade-in-pop
+          .c-our-associate__card-info
+            .c-our-associate__card-text
+              p “กิจกรรมดี ไข่ไก่คุณภาพและยังได้แบ่งปันให้กับผู้อื่น”
+            .c-our-associate__author
+              img.c-our-associate__author-image(
+                src="assets/images/our-associate/img_author_06.jpg"
+                alt="Director"
+              )
+              .c-our-associate__author-info
+                p.c-our-associate__author-position Donator
+                p.c-our-associate__author-name เพ็ญศรี พรประภา
+        //- /c-our-associate__card
+      //- /c-our-associate__item
+    //- /c-our-associate__list
 
     button.c-our-associate__more.js-our-associate-button See More
-  // /c-our-associate__in
-// /c-our-associate
+  //- /c-our-associate__in
+//- /c-our-associate
