--- a/src/styles/common/components/_gnav.scss
+++ b/src/styles/common/components/_gnav.scss
@@ -30,9 +30,6 @@
     bottom: 0;
     left: 0;
     z-index: 99;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 127px;
 
@@ -43,10 +40,26 @@
     }
   }
 
-  @include mq-up(1400) {
-    justify-content: space-between;
-    padding-left: 7.292vw;
-    padding-right: 10.938vw;
+  // @include mq-up(1400) {
+  //   justify-content: space-between;
+  //   padding-left: 7.292vw;
+  //   padding-right: 10.938vw;
+  // }
+
+  &__in {
+    @include mq-up(md) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-width: 1636px;
+      height: 127px;
+      padding: 0 20px;
+      margin: 0 auto;
+
+    @include mq-up(1400) {
+      justify-content: space-between;
+    }
+    }
   }
 
   &__close {
