--- a/src/styles/common/components/_what-we-do.scss
+++ b/src/styles/common/components/_what-we-do.scss
@@ -12,6 +12,7 @@
   &__inner {
     @include mq-up(md) {
       max-width: 1920px;
+      margin: 0 auto;
     }
   }
 
@@ -112,8 +113,12 @@
     font-weight: 500;
 
     @include mq-up(md) {
-      font-size: 6.1rem;
+      font-size: 4.8rem;
       line-height: 1.3;
+    }
+
+    @include mq-up(1500) {
+      font-size: 5.5rem;
     }
   }
 
