--- a/src/views/components/_children-sound.pug
+++ b/src/views/components/_children-sound.pug
@@ -1,6 +1,6 @@
-.c-sec-children-sound(id='children')
+.c-sec-children-sound
   .c-sec-children-sound__inner
-    .c-children-sound
+    .c-children-sound(id='children-sound')
       .c-children-sound__heading
         h2.c-heading-type1 Children Sounds
 
