--- a/src/styles/common/components/_gnav.scss
+++ b/src/styles/common/components/_gnav.scss
@@ -10,7 +10,7 @@
     bottom: 0;
     left: 0;
     overflow-y: auto;
-    padding-top: 135px;
+    padding-top: 35px;
     padding-bottom: 50px;
     display: none;
     visibility: hidden;
@@ -40,12 +40,6 @@
     }
   }
 
-  // @include mq-up(1400) {
-  //   justify-content: space-between;
-  //   padding-left: 7.292vw;
-  //   padding-right: 10.938vw;
-  // }
-
   &__in {
     @include mq-up(md) {
       display: flex;
@@ -64,7 +58,7 @@
 
   &__close {
     position: absolute;
-    top: 40px;
+    top: 20px;
     right: 20px;
     display: block;
     width: 50px;
@@ -103,7 +97,7 @@
   &__item {
     &:not(:first-child) {
       @include mq-down(md) {
-        margin-top: 75px;
+        margin-top: 4.5vh;
       }
 
       @include mq-up(md) {
