➕ add: dummy bg images

--- a/src/views/components/_hero.pug
+++ b/src/views/components/_hero.pug
@@ -6,6 +6,10 @@
     .c-hero__bg-container.swiper-container.js-hero-slider
       .c-hero__bg-wrapper.swiper-wrapper
         .c-hero__bg-item.swiper-slide
+          .c-hero__bg-dummy
+        .c-hero__bg-item.swiper-slide
+          .c-hero__bg-dummy
+        .c-hero__bg-item.swiper-slide
           video(
             autoplay=""
             playsinline=""
