--- a/src/views/components/_why-we-do.pug
+++ b/src/views/components/_why-we-do.pug
@@ -46,6 +46,7 @@
           src="assets/video/sample_mv_01.mp4"
           type="video/mp4"
         )
+      .c-what-we-do__media-dummy
 
     .c-what-we-do__content-box.js-inview.u-fade-in
       .c-what-we-do__label
