--- a/src/styles/common/components/_hero.scss
+++ b/src/styles/common/components/_hero.scss
@@ -65,6 +65,29 @@
         object-fit: cover;
       }
     }
+
+    &-dummy {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      width: 100%;
+      height: 100%;
+      background: url(/assets/images/hero/main.jpg) center no-repeat;
+      background-size: cover;
+
+      &::after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        background: url(/assets/images/hero/bg_overlay.png) center no-repeat;
+        background-size: cover;
+        content: '';
+      }
+    }
   }
 
   &.is-animated {
