--- a/src/styles/common/components/_what-we-do.scss
+++ b/src/styles/common/components/_what-we-do.scss
@@ -91,6 +91,17 @@
       height: 100%;
       object-fit: cover;
     }
+
+    &-dummy {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      width: 100%;
+      height: 100%;
+      background: url(/assets/images/what-we-do/img_what_we_do.jpg) center no-repeat;
+      background-size: cover;
+    }
   }
 
   &__label {
