--- a/src/styles/common/components/_hero.scss
+++ b/src/styles/common/components/_hero.scss
@@ -73,7 +73,7 @@
       z-index: 0;
       width: 100%;
       height: 100%;
-      background: url(/assets/images/hero/main.jpg) center no-repeat;
+      background: url(../images/hero/main.jpg) center no-repeat;
       background-size: cover;
 
       &::after {
@@ -83,7 +83,7 @@
         z-index: 1;
         width: 100%;
         height: 100%;
-        background: url(/assets/images/hero/bg_overlay.png) center no-repeat;
+        background: url(../images/hero/bg_overlay.png) center no-repeat;
         background-size: cover;
         content: '';
       }
