--- a/src/styles/common/components/_what-we-do.scss
+++ b/src/styles/common/components/_what-we-do.scss
@@ -99,7 +99,7 @@
       z-index: 0;
       width: 100%;
       height: 100%;
-      background: url(/assets/images/what-we-do/img_what_we_do.jpg) center no-repeat;
+      background: url(../images/what-we-do/img_what_we_do.jpg) center no-repeat;
       background-size: cover;
     }
   }
